# benefits-cafeteria-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  Dockerfile.tests  Makefile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-tests.yml  elastic_config.yml  entrypoint.sh  entrypoint_tests.sh  example.env  pyproject.toml  setup.cfg
.github/workflows/: deploy_dev.yml  linting.yml  main.yml  tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2024_09_28_1445-4e55f920409e_initial_migration.py  2024_09_28_1451-1d03c0c0183c_models_create_migration.py  2024_09_28_1452-ccb32cbd2dc7_models_create_migration.py  2024_09_28_1751-16cc4637d0f5_udv_39_final_version.py  2024_09_30_1607-3475fd7b3038_.py  2024_10_03_1642-41238eb56a61_delete_cost.py
src/: application.py  config.py  logger.py  main.py  middleware.py
src/api/v1/: __init__.py  default.py  dependencies.py  router.py
src/api/v1/fake/: benefit.py  generators.py  request.py
src/api/v1/routers/: __init__.py  auth.py  benefit.py  benefit_requests.py  benefits.py  categories.py  category.py  default.py  legal_entities.py  legal_entity.py  legalentity.py  position.py  positions.py  protected.py  request.py  reviews.py  users.py  users_fake.py
src/celery/: celery.py  config.py  tasks.py
src/db/: db.py
src/middlewares/: csrf_middleware.py  server_error_middleware.py  session_middleware.py
src/models/: __init__.py  applications.py  base.py  benefits.py  costs.py  custom_types.py  legal_entities.py  payments.py  positions.py  questions.py  reviews.py  sessions.py  users.py
src/repositories/: abstract.py  base.py  benefit_images.py  benefit_requests.py  benefits.py  categories.py  exceptions.py  legal_entities.py  positions.py  reviews.py  sessions.py  users.py
src/schemas/: LegalEntity.py  answer.py  benefit.py  benefitposition.py  category.py  email.py  legalentity.py  payment.py  position.py  question.py  request.py  review.py  session.py  user.py
src/services/: abstract.py  auth.py  base.py  benefit_requests.py  benefits.py  categories.py  exceptions.py  legal_entities.py  payments.py  positions.py  reviews.py  sessions.py  users.py
src/settings/: app.py  base.py  development.py  production.py  test.py
src/static/templates/email/: balance-changes.html  benefit-request.html  benefit-response.html  register.html  reset-password.html
src/utils/: elastic_index.py  email.py  excel_parser.py  field_parsers.py  filter_parsers.py  jwt.py  legal_entity_count.py  repository.py  role_mapper.py  s3.py  security.py
src/utils/email_sender/: auth.py  base.py  benefit_requests.py  users.py
src/utils/email_templates/: register.html  reset-password.html
src/utils/parser/: excel_parser.py  export_timezone_helper.py  field_parsers.py
tests/: conftest.py  docker-compose.yml  test_benefit_requests.py  test_benefits.py  test_categories.py  test_def.py  test_legal_entities.py  test_ping.py  test_position.py  test_users.py
tests/test_benefits/: test_creation_benefits.py  test_crud.py  test_endpoints_benefits.py  test_excel_benefits.py  test_pairwise.py
tests/test_users/: test_creation.py  test_creation_users.py  test_endpoints.py  test_endpoints_users.py  test_excel_users.py
