[tool.poetry]
name = "benefits-cafeteria-backend"
version = "0.1.0"
description = "Backend part of UDV-Benefits-Cafeteria."
authors = ["Materacl <yurchenko.stas15@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
pydantic-settings = "^2.5.0"
starlette = "^0.38.5"
loguru = "^0.7.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
setuptools = "^74.1.2"
pre-commit = "^3.3.3"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
debugpy = "^1.8.5"
web-pdb = "^1.6.2"

[tool.black]
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
