[tool.poetry]
name = "benefits-cafeteria-backend"
version = "0.1.0"
description = "Backend part of UDV-Benefits-Cafeteria."
authors = ["Materacl <yurchenko.stas15@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
asyncpg = "^0.30.0"
pydantic-settings = "^2.5.0"
starlette = "^0.38.5"
loguru = "^0.7.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pandas = "^2.2.3"
openpyxl = "^3.1.5"
python-multipart = "^0.0.19"
sentry-sdk = {extras = ["fastapi"], version = "^2.16.0"}
greenlet = "^3.1.1"
fastapi-mail = "^1.4.1"
fastapi-storages = "^0.3.0"
elasticsearch = {extras = ["async"], version = "^8.15.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-limiter = "^0.1.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.12.0"
setuptools = "^74.1.2"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
debugpy = "^1.8.5"
faker = {extras = ["ru"], version = "^33.1.0"}

[tool.black]
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra"
]
pythonpath = [
    ".", "tests"
]
markers = [
    "elastic: disable autouse fixtures for Elasticsearch mocking",
    "excel: Excel test suite",
    "request_with_status(status, user_id): mark for a test with a specified benefit request status and user_id"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
